--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -593,7 +593,7 @@
                       <div class="upload-container">
                       <label for="slide_file" class="upload-label">
                           <i class="ri-upload-line"></i>
-                          <span id="upload-text-n">Choose File</span>
+                          <span id="upload-text">Choose File</span>
                       </label>
                       <input type="file" onchange="saveInput(this)" id="slide_file" name="slide_file" class="upload-input" accept="video/*">
                   </div>
@@ -636,21 +636,19 @@
                 .catch(error => console.error('Error fetching clip IDs:', error));
         }
         function saveInput(inputElement) {
+            const uploadElement = document.getElementById('upload-text');
+
             if (inputElement.type === 'file') {
                 if (inputElement.value) {
                     document.getElementById('error-slide').textContent = '';
                     
                     const fileName = inputElement.files.length > 0 ? inputElement.files[0].name : "Choode File";
-                    const uploadElements = document.querySelectorAll('[id^="upload-text"]');
-    
-                    uploadElements.forEach(element => {
-                        element.textContent = fileName.slice(0, 15);
-                    });
+                    uploadElement.textContent=fileName.slice(0,15)
                     document.getElementById('currentFile').textContent = ''
 
                     for (const selectItem of document.querySelectorAll('select')) {
                         selectItem.value = '';
-                        // saveInput(selectItem)
+                        saveInput(selectItem)
 
                     }
                 }
@@ -660,14 +658,12 @@
                 sessionStorage.setItem(inputElement.id, inputElement.value);
                 console.log(inputElement.value);
                 if (inputElement.id.startsWith('videoSelect_') && inputElement.value !== '') {
-                    document.getElementById("slide_file").value = '';
-                    
                     document.getElementById('currentFile').textContent = '';
-                    const uploadElements = document.querySelectorAll('[id^="upload-text"]');
+                    document.getElementById("slide_file").value = '';
+                    uploadElement.textContent='Choose File'
+                    saveInput(document.getElementById("slide_file"))
+                    
     
-                    uploadElements.forEach(element => {
-                        element.textContent = "Choose File";
-                    });
                 };
 
             }
@@ -773,7 +769,7 @@
                       <div class="upload-container">
                       <label for="slide_file" class="upload-label">
                           <i class="ri-upload-line"></i>
-                          <span id="upload-text-o">Choose File</span>
+                          <span id="upload-text">Choose File</span>
                       </label>
                       <input type="file" onchange="saveInput(this)" id="slide_file" name="slide_file" class="upload-input" accept="video/*">
                   </div>
