--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -654,6 +654,7 @@
                     document.getElementById(`videoSelect_${clip_id}_${num}`).value=""
                     document.getElementById(`selected_topic_${clip_id}_${num}`).value=""
                     saveInput(document.getElementById(`videoSelect_${clip_id}_${num}`))
+                    saveInput(document.getElementById(`selected_topic_${clip_id}_${num}`))
                 }
 
             } else {
