--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -646,11 +646,6 @@
                     uploadElement.textContent=fileName.slice(0,15)
                     document.getElementById('currentFile').textContent = ''
 
-                    // for (const selectItem of document.querySelectorAll('select')) {
-                    //     selectItem.value = '';
-                    //     saveInput(selectItem)
-
-                    // }
                     document.getElementById(`videoSelect_${clip_id}_${num}`).value=""
                     document.getElementById(`selected_topic_${clip_id}_${num}`).value=""
                     saveInput(document.getElementById(`videoSelect_${clip_id}_${num}`))
@@ -661,7 +656,7 @@
 
                 sessionStorage.setItem(inputElement.id, inputElement.value);
                 console.log(inputElement.value);
-                if (inputElement.id.startsWith('videoSelect_') && inputElement.value !== '') {
+                if (inputElement.id == `videoSelect_${clip_id}_${num}` && inputElement.value !== '') {
                     document.getElementById('currentFile').textContent = '';
                     document.getElementById("slide_file").value = '';
                     uploadElement.textContent='Choose File'
@@ -699,7 +694,6 @@
 
 
         function handleSelection(span, ul, remainingInput, errorMessage, clipId) {
-            // span.addEventListener("mouseup", function () {
             document.getElementById(`grid_${clipId}`).addEventListener("mouseup", function () {
                 const selection = window.getSelection();
                 if (selection && selection.toString().trim()) {
