--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -658,11 +658,9 @@
 
                 sessionStorage.setItem(inputElement.id, inputElement.value);
                 console.log(inputElement.value);
-                document.getElementById('currentFile').textContent = '';
-                    document.getElementById("slide_file").value = '';
-                    uploadElement.textContent='Choose File'
-                    saveInput(document.getElementById("slide_file"))
-                if (inputElement.id === `videoSelect_${clip_id}_${num}` && inputElement.value !== '') {
+                if (inputElement.id === 'videoSelect_' + clip_id + '_' + num && inputElement.value.replace(/^\s+|\s+$/g, '') !== '') {
+
+                // if (inputElement.id === `videoSelect_${clip_id}_${num}` && inputElement.value.trim() !== '') {
                     document.getElementById('currentFile').textContent = '';
                     document.getElementById("slide_file").value = '';
                     uploadElement.textContent='Choose File'
