--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -667,6 +667,7 @@
                     document.getElementById("slide_file").value = '';
                     console.log('slide_file')
                     uploadElement.textContent='Choose File'
+                    console.log('uploadElement:',uploadElement)
                     saveInput(document.getElementById("slide_file"))
                     
     
