--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -591,7 +591,7 @@
                           <i class="ri-upload-line"></i>
                           <span id="upload-text">Choose File</span>
                           </label>
-                          <i id="clear-file"  onclick="clearFileInput()" class="ri-close-circle-line"></i>
+                          <i id="clear-file" style="display:none" onclick="clearFileInput()" class="ri-close-circle-line"></i>
                       <input type="file" onchange="saveInput(this)" id="slide_file" name="slide_file" class="upload-input" accept="video/*">
 
                   </div>
@@ -778,7 +778,7 @@
                           <span id="upload-text">Choose File</span>
                           
                           </label>
-                          <iid="clear-file"  onclick="clearFileInput()" class="ri-close-circle-line"></i>
+                          <i id="clear-file" style="display:none" onclick="clearFileInput()" class="ri-close-circle-line"></i>
 
                       <input type="file" onchange="saveInput(this)" id="slide_file" name="slide_file" class="upload-input" accept="video/*">
                   </div>
