--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -2,6 +2,9 @@
     #clear-file{
         padding-right: 4px;
     }
+    #currentFile{
+        font-size: small;
+    }
     [data-tooltip] {
         position: relative;
     }
