--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -4,6 +4,7 @@
     }
     #currentFile{
         font-size: small;
+        text-align: center;
     }
     [data-tooltip] {
         position: relative;
