--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -1,6 +1,7 @@
 <style>
     #clear-file{
         padding-right: 4px;
+        font-size: large;
     }
     #currentFile{
         font-size: small;
