--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -1,7 +1,7 @@
 <style>
     #clear-file{
         padding-right: 4px;
-        font-size: larger;
+        font-size: 24px;
     }
     #currentFile{
         font-size: small;
