--- a/templates/vlc/download.html
+++ b/templates/vlc/download.html
@@ -406,8 +406,8 @@
                     line-height: 21.94px;
                     text-align: left;
                     color: #864AF9;
-                    padding: 12px 24px;
                     width: 100%;
+                    border-color: #864AF9;
                     gap: 10px">
             <i style="width: 24px; height: 24px;color: #864AF9; " class="ri-save-line"></i>
             <span style="line-height: 24px;">Save as Draft</span>
