--- a/templates/vlc/download.html
+++ b/templates/vlc/download.html
@@ -407,7 +407,7 @@
                     text-align: left;
                     color: #864AF9;
                     width: 100%;
-                    border-color: #864AF9;
+                    border:0.8px solid #864AF9;
                     gap: 10px">
             <i style="width: 24px; height: 24px;color: #864AF9; " class="ri-save-line"></i>
             <span style="line-height: 24px;">Save as Draft</span>
