--- a/templates/vlc/download.html
+++ b/templates/vlc/download.html
@@ -407,6 +407,7 @@
                     text-align: left;
                     color: #864AF9;
                     width: 100%;
+                    padding: 12px 24px;
                     border:0.8px solid #864AF9;
                     gap: 10px">
             <i style="width: 24px; height: 24px;color: #864AF9; " class="ri-save-line"></i>
