--- a/templates/vlc/download.html
+++ b/templates/vlc/download.html
@@ -403,6 +403,7 @@
                     font-family: Montserrat;
                     font-size: 18px;
                     font-weight: 500;
+                    margin-top: -40px;
                     line-height: 21.94px;
                     text-align: left;
                     color: #864AF9;
