--- a/templates/vlc/download.html
+++ b/templates/vlc/download.html
@@ -12,6 +12,10 @@
     {% include 'partials/head_c.html' %}
 
     <link rel="stylesheet" href="{% static 'download.css' %}" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.min.css">
+
 
     <style>
       #plansPopup {
