--- a/templates/vlc/download.html
+++ b/templates/vlc/download.html
@@ -415,7 +415,7 @@
                     padding: 12px 24px;
                     border:0.8px solid #864AF9;
                     gap: 10px">
-            <i style="width: 24px; height: 24px;color: #864AF9; " class="ri-save-line"></i>
+            <!-- <i style="width: 24px; height: 24px;color: #864AF9; " class="ri-save-line"></i> -->
             <span style="line-height: 24px;">Save as Draft</span>
           </a>
           {%endif%}
