--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -396,6 +396,8 @@
                         liItem.dataset.subclip_id=data.subclip_id;
                         liItem.dataset.main_id=data.main_id;
                         liItem.disabled=false;
+                        liItem.style.cursor='pointer';
+
                         document.getElementById('add-subclip-popup').style.display = 'none';
                     };
                     alert('Clip Submitted Successfully');
