--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -374,6 +374,7 @@
 
             // Create a FormData object to gather all form inputs
             const formData = new FormData(form);
+            document.getElementById('add-subclip-popup').style.display = 'none';
 
             // Send the AJAX request
             fetch(form.action, {
@@ -398,8 +399,10 @@
                         liItem.disabled=false;
                         liItem.style.cursor='pointer';
 
-                        document.getElementById('add-subclip-popup').style.display = 'none';
                     };
+                    document.getElementById('submit-clip').disabled = false;
+                    document.getElementById('submit-clip').style.cursor = 'pointer';
+
                     alert('Clip Submitted Successfully');
                 } else {
                     document.getElementById('error-slide').textContent = data.error || "An error occurred.";
