--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -727,7 +727,7 @@
                         li.disabled=true
                         li.style.cursor='wait'
                         li.onclick = function () {
-                                editCurrentLi(this);
+                                editCurrentLi(li);
                             };
                             num = span.dataset.num
                             li.id=`current_li_${clipId}_${num}`
