--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -849,7 +849,7 @@
         function editCurrentLi(liItem) {    
             num=liItem.dataset.num;
             console.log(liItem)
-            clip_id=liItem.dataset.clipId;
+            clip_id=liItem.dataset.subclip_id;
             text= liItem.textContent
             const video_clip_id= liItem.dataset.video_clip_id
             const current_file= liItem.dataset.current_file
