--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -861,7 +861,7 @@
             document.getElementById('add-subclip-popup').style.display = 'flex';
 
  
-            handleEditSelection(liItem,current_file,video_clip_id,cat_id)
+            handleEditSelection(liItem,current_file,subclip_id,video_clip_id,cat_id)
 
         }
     </script>
