--- a/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/subclipform.html
@@ -408,7 +408,7 @@
                     document.getElementById('submit-clip').disabled = false;
                     document.getElementById('submit-clip').style.cursor = 'pointer';
 
-                    alert('Clip Submitted Successfully');
+                    console.log('Clip Submitted Successfully');
                 } else {
                     document.getElementById('error-slide').textContent = data.error || "An error occurred.";
                 }
